# taxdb-poc

./: .coveragerc  .env.example  .gitignore  Makefile  README.md  pyproject.toml  spec.md
.github/: CI_PIPELINE.md
.github/workflows/: README.md  ci.yml
docker/: docker-compose.yml  pgvector-init.sql
infra/: README.md  main.bicep
openapi/: taxdb.yaml
scripts/: cost_check.sh  gen_openapi.py  load_sample.sh
src/: __init__.py  api.py  db.py  models.py  repository.py  settings.py
src/etl/: __init__.py  be_moniteur.py  de_bgbl.py  es_boe.py  pipeline_completion.py  run_pipeline.py  utils.py
tests/: conftest.py  test_api.py  test_db.py  test_e2e.py  test_models.py  test_repository.py  test_vector_storage.py
tests/etl/: __init__.py  test_be_moniteur.py  test_de_bgbl.py  test_es_boe.py  test_utils.py
